welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:9: error: not found: value marquer
	marquer();
        ^PatternPicture:13: error: not found: value marquer
	marquer();
        ^PatternPicture:20: error: not found: value faireV
faireV();
^